Fix conquer Wrapping for some screen sizes Add a description Tooltip to Conquer numbers

--- a/resources/sass/customStyles.scss
+++ b/resources/sass/customStyles.scss
@@ -154,3 +154,7 @@ table.dataTable > thead .sorting_desc_disabled:before,
 table.dataTable > thead .sorting_desc_disabled:after {
     bottom: 0 !important;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
